<resources>
    <string name="app_name">Sikasir</string>
    <string name="masuk_sebagai_admin">Masuk Sebagai Admin</string>
    <string name="masuk_sebagai_kasir">Masuk Sebagai Kasir</string>
    <string name="username">Username</string>
    <string name="user_level">User Level</string>
    <string name="admin">ADMIN</string>
    <string name="kasir">KASIR</string>
    <string name="password">Password</string>
    <string name="sign_in">Masuk</string>
    <string name="error_blank_field">Field ini tidak boleh kosong</string>
    <string name="error_wrong_user_level">Data yang anda masukkan tidak ditemukan</string>
    <string name="selamat_datang_sikasir">Welcome, sikasir</string>
    <string name="selamat_datang_siadmin">Welcome, siadmin</string>
    <string name="logout">Keluar</string>
    <string name="input_data_stok_barang">Input Data Stok Barang</string>
    <string name="update_delete_data_stok_barang">Update/Delete Data Stok Barang</string>
    <string name="lihat_transaksi_per_tanggal">Lihat Transaksi per Tanggal</string>
    <string name="input_data_transaksi">Input Data Transaksi</string>
    <string name="transaction">Transaction</string>
    <string name="hint_transaction_search">Tanggal/Bulan/Tahun</string>
    <string name="dummy_date">02/02/2012</string>
    <string name="dummy_category">Ban Motor</string>
    <string name="dummy_id">AAXC</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="simpan">Simpan</string>
    <string name="kategori_barang">Kategori Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="update_data_stok_barang">Update Data Stok Barang</string>
    <string name="data_barang">Data Barang</string>
    <string name="uang_diterima">Uang Diterima</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="base_name">NAMA:</string>
    <string name="base_sum">JUMLAH:</string>
    <string name="base_header_detail_transaction">Transaksi\n</string>
    <string name="base_income">UANG DITERIMA:</string>
    <string name="base_outcome">UANG KEMBALI:</string>
    <string name="print">Print</string>
    <string name="cari">Cari</string>
    <string name="masukkan_tanggal">Masukkan Tanggal</string>
    <string name="dummy_name">Nama Barang</string>
    <string name="dummy_sum">10</string>
    <string name="dummy_price">100000</string>

    <string-array name="sum_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
