<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_transaction_info"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPurple"
    android:padding="@dimen/tiny_margin"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_transaction_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/tiny_margin"
        tools:text="@string/dummy_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/tiny_margin"
        tools:text="@string/dummy_category"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/tiny_margin"
        tools:text="@string/dummy_id"/>



</LinearLayout>