<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/toolbar_add_stock"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:elevation="10dp"
            android:background="@drawable/header_home"/>

        <TextView
            android:id="@+id/tv_value_name_detail_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:elevation="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/dummy_name"/>

        <RelativeLayout
            android:id="@+id/rv_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_below="@id/toolbar_add_stock">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/default_margin"
                    android:paddingBottom="@dimen/default_margin">

                    <TextView
                        android:id="@+id/tv_id_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/kode_barang"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_value_id_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_below="@id/tv_id_detail_barang"
                        tools:text="@string/dummy_id"/>

                    <TextView
                        android:id="@+id/tv_kategori_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_below="@id/tv_value_id_detail_barang"
                        android:text="@string/kategori_barang"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_value_kategori_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@id/tv_kategori_detail_barang"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="@string/dummy_category"/>

                    <TextView
                        android:id="@+id/tv_jumlah_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_below="@id/tv_value_kategori_detail_barang"
                        android:text="@string/jumlah_barang"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_value_jumlah_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@id/tv_jumlah_detail_barang"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="@string/dummy_sum"/>

                    <TextView
                        android:id="@+id/tv_harga_jual_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_below="@id/tv_value_jumlah_detail_barang"
                        android:text="@string/harga_jual"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_value_harga_jual_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@id/tv_harga_jual_detail_barang"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="@string/dummy_price" />

                    <TextView
                        android:id="@+id/tv_harga_beli_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_below="@id/tv_value_harga_jual_detail_barang"
                        android:text="@string/harga_beli"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_value_harga_beli_detail_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_below="@id/tv_harga_beli_detail_barang"
                        android:textColor="@color/colorPurple"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="@string/dummy_price" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>