<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InputTransactionActivity">

    <Toolbar
        android:id="@+id/toolbar_add_transaction"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:elevation="10dp"
        android:background="@drawable/header_home"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:elevation="10dp"
        android:text="@string/input_data_transaksi"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/toolbar_add_transaction"
        android:layout_marginTop="@dimen/default_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_margin"
                android:paddingBottom="@dimen/default_margin">

                <TextView
                    android:id="@+id/tv_id_barang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/kode_barang"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ipt_id_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_id_barang"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:drawablePadding="30dp"
                    android:inputType="text"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/tv_sum_barang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_below="@id/ipt_id_barang"
                    android:text="@string/jumlah_barang"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ipt_sum_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sum_barang"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:drawablePadding="30dp"
                    android:inputType="text"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/tv_uang_bayar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_below="@id/ipt_sum_barang"
                    android:text="@string/uang_diterima"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ipt_uang_bayar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_uang_bayar"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:drawablePadding="30dp"
                    android:inputType="text"
                    android:padding="10dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textColor="@android:color/white"
        android:background="@drawable/bt_uisquare"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/default_margin"/>

</RelativeLayout>